<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded"
    android:id="@+id/coordinator">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:id="@+id/collaps"
            app:title="Title"
            android:textSize="35sp"
            app:expandedTitleMarginBottom="95dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?colorPrimary">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:id="@+id/img_detail"
                android:src="@drawable/litc"
                android:scaleType="centerCrop" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:src="@drawable/image_shadow"
                tools:ignore="ContentDescription" />

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/toolbar"
                android:background="@null"
                app:navigationIcon="@drawable/abc_ic_ab_back_material"
                app:layout_collapseMode="pin" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detail_card"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/cardview_dark_background"
                android:elevation="4dp"
                app:cardCornerRadius="10dp"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:paddingBottom="16dp">
                
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/detail_tv_genre_duration"
                        android:text="@string/gen_duration"
                        android:textColor="@android:color/primary_text_dark"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/detail_tv_ov_title"
                        android:text="@string/overview"
                        android:textColor="@android:color/primary_text_dark"
                        android:textAllCaps="true"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:gravity="center_vertical"
                        android:layout_marginTop="16dp"
                        android:minHeight="32dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detail_tv_genre_duration" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/detail_tv_overview"
                        android:text="@string/overview_detail"
                        android:textColor="@android:color/secondary_text_dark"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp"
                        android:lineSpacingExtra="4dp"
                        app:layout_constraintTop_toBottomOf="@id/detail_tv_ov_title" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>